@@ -704,7 +704,7 @@ in profile
 When a new tab is created with profile
 .Ar N
 it uses all options that are set for this profile. Currently the only options that can be set per profile are
-.Cm Pixmap , background , command , foreground , saveLines , holdExit , holdExitText , holdExitTitle , tabTitle , titleFormat
+.Cm Pixmap , background , command , foreground , saveLines , holdExit , holdExitText , holdExitTitle , tabTitle , titleFormat , winTitleFormat
 and
 .Cm workingDirectory .
 Then all the settings from that profile number are used.
